<resources>
    <string name="app_name">Liz\'s Course Application</string>
    <string name="action_settings">Settings</string>
    <string name="btn_num2">2</string>
    <string name="btn_num3">3</string>
    <string name="btn_num0">0</string>
    <string name="btn_num1">1</string>
    <string name="btn_num6">6</string>
    <string name="btn_num5">5</string>
    <string name="btn_num4">4</string>
    <string name="btn_num9">9</string>
    <string name="btn_num8">8</string>
    <string name="btn_num7">7</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_call_now">Call Now</string>
    <string name="title_activity_email">EmailActivity</string>
</resources>
