<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/num_pad"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/callreset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1.5"
            android:background="@drawable/roundedbutton"
            android:gravity="right"
            android:hint="Enter Number"
            android:padding="10dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="18pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/roundedcorner">

            <Button
                android:id="@+id/btn_num7"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num7" />

            <Button
                android:id="@+id/btn_num8"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num8" />

            <Button
                android:id="@+id/btn_num9"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num9" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/roundedcorner">

            <Button
                android:id="@+id/btn_num4"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num4" />

            <Button
                android:id="@+id/btn_num5"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num5" />

            <Button
                android:id="@+id/btn_num6"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num6" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/roundedcorner">

            <Button
                android:id="@+id/btn_num1"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num1" />

            <Button
                android:id="@+id/btn_num2"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num2" />

            <Button
                android:id="@+id/btn_num3"
                style="@style/style_calc_btn"
                android:onClick="btn_clicked"
                android:text="@string/btn_num3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@drawable/roundedcorner">

            <Button
                android:id="@+id/btn_num0"
                style="@style/style_calc_btn"
                android:layout_weight="2"
                android:onClick="btn_clicked"
                android:text="@string/btn_num0" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/callreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/num_pad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_call"
            style="@style/ActivityButton"
            android:text="@string/btn_call_now"
            android:onClick="call_clicked"/>
        <Button
            android:id="@+id/btn_clear"
            android:layout_marginLeft="10dp"
            style="@style/ActivityButton"
            android:onClick="btn_clicked"
            android:text="@string/btn_reset"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>